force-app/main/default/objects/Rest_Service_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Application_Base_URI__c</fullName>
        <label>Application Base URI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Authorization_Key__c</fullName>
        <label>Authorization Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Endpoint__c</fullName>
        <label>Login Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <description>Contains the base uri and credentials required for their API.</description>
    <label>Rest Service Setting</label>
    <pluralLabel>Rest Service Settings</pluralLabel>
</CustomObject>